Added Pred. Maintenance and MODAPTO Modules API